<!--
  ~ Copyright 2017 Google Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Hello APK</string>
    <string name="goodbye_instant_world">Goodbye World!</string>
    <string name="hello_instant_world">Hello World!</string>
    <string name="instant_app_name">Hello Cookie API</string>
    <string name="title_activity_store">Cookie API Sample</string>
    <string name="api_version">You\'re using the Cookie API from: </string>
    <string name="cookie_api_hint">Add some text to store</string>
    <string name="store_cookie">Store Cookie</string>
    <string name="read_cookie">Read Cookie</string>
    <string name="clear_cookie">Clear Cookie</string>
</resources>
